# mjlab_setup

./: .gitignore  README.md  pyproject.toml
src/scripts/: create_arms_only_motion.py  crop_motion.py  csv_to_npz.py  rerun_visualize.py
