[project]
name = "mjlab-setup"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mjlab",
    "mujoco-warp",
    "pin>=3.8.0",
    "rerun-sdk>=0.20.0",
]

[tool.uv.sources]
mjlab = { git = "https://github.com/mujocolab/mjlab" }
mujoco-warp = { git = "https://github.com/google-deepmind/mujoco_warp", rev = "fb9bf88399796f161a4a2b129d846484da8a4ad0" }

